removing colombo store

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -50,8 +50,8 @@
         </header>
         <main>
             <div id="destaques">
-                <h1>Aqui você pode pesquisar produtos das lojas CASA&VIDEO, Colombo e Saldão da
-                    informatica e comparar seus preços!</h1>
+                <h1>Aqui você pode pesquisar produtos das lojas CASA&VIDEO e Saldão da
+                    informática e comparar seus preços!</h1>
                 <div class="destaques_uni"></div>
             </div>
         </main>
