--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </main>
         <footer>
             <div class="col-md-12 copy">
-                <p class="text-center">BuyIt &copy;. Desenvolvido por Elisama para disciplina de JavaScript.</p>
+                <p class="text-center">BuyIt &copy;. Desenvolvido por Elisama e Raul para disciplina de JavaScript.</p>
             </div>
         </footer>
     </div>
